--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Fahra Akhlaq</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I would like to make a career change into software engineering!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Birmingham</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Trekking, Travelling, Cooking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Lead Dev Ops</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Birmingham</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The e-commerce presence is huge at this current time, 
+        and its only going to get bigger! I can see more job opportunites 
+        and an actual career path that i would enjoy in code.
+      </p>
     </section>
 
     <footer id="footer">
