made slight changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1>Why do you want to be a web developer?</h1>
       <p>The e-commerce presence is huge at this current time, 
         and its only going to get bigger! I can see more job opportunites 
-        and an actual career path that i would enjoy in code.
+        and an actual career path that i would enjoy.
       </p>
     </section>
 
